k8s/react-forntend-app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: ameen2607-dev
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
